# matlab_lsp_server

./: .gitignore  .matlab-lsprc.json  .matlab-lsprc.json.example  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION.md  DOCUMENTATION_FINAL.md  FINAL_VERIFICATION_REPORT.md  INSTALL.md  INTEGRATION.md  LICENSE  MANUAL_TESTING_REPORT.md  MIGRATION.md  QUICK_START.md  README.md  RELEASE_INSTRUCTIONS.md  RENAME_COMPLETE.md  TODO.md  TODO_build_fix.md  TODO_final.md  clean_reinstall_v0.2.3.bat  create_release.py  diagnose_universal.bat  diagnose_v0.2.3.bat  fix_diagnostics_v0.2.6.py  fix_document_sync_v0.2.6.py  fix_matlab_server_v0.2.5.sh  fix_method_handlers_v0.2.6.py  mlint.bat  mlint.sh  modify_matlab_server_v0.2.5.py  pyproject.toml  reinstall_universal.bat  requirements-dev.txt  requirements.txt  server.py  start_crush.bat  (+4 more)
.github/workflows/: publish.yml  publish.yml.old
ISSUES/issue_v0.2.2/: LSP_TEST_RESULTS.md
ISSUES/issue_v0.2.3/: V0.2.3_TEST_RESULTS.md
ISSUES/issue_v0.2.4/: FINAL_REPORT.md  README.md  V0.2.4_TEST_REPORT.md
ISSUES/issue_v0.2.4_self_cheak/: UNIVERSAL_SCRIPTS_README.md  reinstall_v0.2.4_clean.bat
ISSUES/issue_v0.2.5/: TESTING_FEEDBACK.md
for_tests/: .crush.json  test_lsp_detailed.m  test_matlab_lsp_simple.m
src/: __init__.py  matlab_server.py
src/analyzer/: base_analyzer.py  mlint_analyzer.py
src/features/: feature_manager.py
src/handlers/: base.py  code_action.py  completion.py  definition.py  diagnostics.py  document_symbol.py  formatting.py  hover.py  references.py  workspace_symbol.py
src/matlab_lsp_server/: __init__.py  matlab_server.py  server.py
src/matlab_lsp_server/analyzer/: base_analyzer.py  mlint_analyzer.py
src/matlab_lsp_server/features/: feature_manager.py
src/matlab_lsp_server/handlers/: __init__.py  base.py  code_action.py  completion.py  definition.py  diagnostics.py  document_symbol.py  formatting.py  hover.py  references.py  (+1 more)
src/parser/: matlab_parser.py  models.py
src/protocol/: document_sync.py  lifecycle.py
src/utils/: cache.py  config.py  document_store.py  logging.py  performance.py  symbol_table.py
tests/: conftest.py
tests/unit/: test_base_analyzer.py  test_cache.py  test_code_action.py  test_completion.py  test_definition.py  test_diagnostics.py  test_document_symbol.py  test_document_sync.py  test_feature_manager.py  test_formatting.py  test_hover.py  test_lifecycle.py  test_mlint_analyzer.py  test_parser.py  test_performance.py  test_references.py  test_symbol_table.py  test_workspace_symbol.py
(+11 files in other folders)
